# narrascape

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start_dashboard.bat
.github/workflows/: ci.yml
benchmarks/: catalog.yaml
docs/: BRIDGE_MODE.md  ai-director.md  architecture.md  assistant-handoff.md  config-reference.md  design.md  features.md  film-capability-roadmap.md  index.md  product-introduction.md  provider-governance.md  quickstart.md  reference-image-storyboard-workflow.md  release-readiness.md  style-consistency.md  type-checking.md
docs/agent-stages/: animatic.md  assistant_handoff.md  audio.md  concat.md  continuity_bible.md  creative_review.md  design.md  director_contract.md  director_review.md  editing_review.md  film_assemble.md  film_supervisor.md  film_timeline.md  footage_edit.md  generate_images.md  generate_music.md  generate_tts.md  generate_video.md  humanize.md  kenburns.md  pre_production.md  production_readiness.md  qa.md  reference_plate.md  remix_audio.md  remotion_preview.md  research.md  rework_execute.md  rework_plan.md  screenplay_structure.md  source_media.md  storyboard_sheet.md  subtitles.md  take_select.md  visual_semantic_qa.md  write.md
docs/superpowers/plans/: 2026-07-11-stabilization-beta.md
examples/crime-and-punishment/: README.md  config.agnes.yaml  config.production.yaml  config.yaml  director_notes.md  film_brief.md  image_map.yaml  image_prompts.yaml
examples/crime-and-punishment/scripts/: script.yaml
examples/documentary/: README.md  config.yaml  image_map.yaml
examples/documentary/scripts/: script.yaml
examples/golden-sample/: README.md  config.yaml  director_notes.md
examples/golden-sample/scripts/: script.yaml
examples/tolstoy/: config.yaml  image_map.yaml  image_prompts.yaml
examples/tolstoy/scripts/: script_11.yaml
src/narrascape/: __init__.py  api_keys.py  application.py  artifact_migrations.py  artifacts.py  benchmarks.py  cache.py  catalog.py  cli.py  cli_runtime.py  compose.py  config.py  dashboard.py  dashboard_data.py  dashboard_i18n.py  dashboard_jobs.py  dashboard_stage_view.py  dashboard_workbench.py  jobs.py  log_setup.py  logging.py  media_analysis.py  pipeline.py  pipeline_approval.py  prompt_compiler.py  prompt_quality.py  prompt_safety.py  reference_assets.py  stage_contracts.py  workbench_api.py  worker.py
src/narrascape/agent/: __init__.py  analyzer.py  cinematography_knowledge.py  models.py  prompt_director.py  prompt_director_parsing.py
src/narrascape/dashboard_pages/: __init__.py  ai_director.py  context.py  home.py  pipeline.py  resources.py  shared.py  system.py  timeline.py  workbench.py
src/narrascape/humanizer/: __init__.py  engine.py
src/narrascape/llm/: __init__.py  bridge.py  client.py  log_policy.py  models.py  output_parser.py  prompts.py
src/narrascape/motion/: __init__.py  base.py  crop.py  factory.py  pil.py  zoompan.py
src/narrascape/providers/: __init__.py  execution.py  fault_injection.py  health.py  image_adapter.py  registry.py  runtime.py  selector.py  video_adapters.py
src/narrascape/research/: __init__.py  engine.py
src/narrascape/stages/: __init__.py  animatic.py  assistant_handoff.py  audio.py  base.py  concat.py  continuity_bible.py  creative_review.py  design.py  director_contract.py  director_review.py  editing_review.py  film_assemble.py  film_supervisor.py  film_timeline.py  footage_edit.py  generate_images.py  generate_music.py  generate_tts.py  generate_video.py  generate_video_services.py  humanize.py  kenburns.py  pre_production.py  pre_production_services.py  production_readiness.py  qa.py  reference_plate.py  remotion_preview.py  research.py  rework_execute.py  rework_plan.py  screenplay_structure.py  source_media.py  storyboard_sheet.py  subtitles.py  take_select.py  visual_semantic_qa.py  write.py
src/narrascape/uploader/: image_uploader.py
src/narrascape/utils/: __init__.py  budget.py  ffmpeg.py  retry.py  safe_io.py
src/narrascape/workbench_web/: index.html
src/narrascape/workbench_web/assets/: index-BKPzIjJy.js  index-COd-WznC.css
src/narrascape/writer/: __init__.py  engine.py
tests/: test_agent.py  test_api_keys.py  test_application_services.py  test_architecture_guards.py  test_artifact_migrations.py  test_artifacts.py  test_atomic_stage_io.py  test_benchmarks.py  test_budget.py  test_cache.py  test_cli_llm_logging.py  test_cli_status.py  test_config.py  test_dashboard_data.py  test_dashboard_i18n.py  test_dashboard_view_jobs.py  test_dashboard_workbench.py  test_director_contract.py  test_director_layers.py  test_docs_links.py  test_documentation_governance.py  test_execution_quality_footage.py  test_ffmpeg_runtime.py  test_film_assemble.py  test_film_qa_director_review.py  test_film_supervisor.py  test_film_timeline.py  test_image_provider_adapter.py  test_integration.py  test_jobs.py  test_llm_logging.py  test_media_analysis.py  test_media_safety.py  test_motion.py  test_openmontage_borrowed_features.py  test_pipeline.py  test_pipeline_approval.py  test_pre_production_services.py  test_production_readiness.py  test_prompt_director_parsing.py  (+12 more)
tests/fixtures/history/v0/: project-a.yaml  project-b.json
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: workbench.spec.ts
web/src/: App.tsx  api.ts  labels.ts  main.tsx  styles.css  types.ts
web/src/components/: Inspector.tsx  JobDock.tsx  TimelineView.tsx  WorkflowCanvas.tsx
