[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narrascape"
dynamic = ["version"]
description = "Production-grade video pipeline for book explainer and documentary content. Ken Burns, parallel rendering, content-hash caching, provider plugins."
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Narrascape Team", email = "team@narrascape.dev"},
]
keywords = ["video", "pipeline", "ffmpeg", "ken-burns", "documentary", "explainer", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "rich>=13.0",
    "typer>=0.12",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
narrascape = "narrascape.cli:main"

[project.urls]
Homepage = "https://github.com/calesthio/narrascape"
Documentation = "https://narrascape.dev"
Repository = "https://github.com/calesthio/narrascape"
Issues = "https://github.com/calesthio/narrascape/issues"
Discussions = "https://github.com/calesthio/narrascape/discussions"

[tool.hatch.version]
path = "src/narrascape/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/narrascape"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=narrascape --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/narrascape"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
