[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narrascape"
dynamic = ["version"]
description = "Staged AI film-production pipeline with AI Director, film timeline assembly, QA, and rework loops."
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Narrascape Team", email = "team@narrascape.dev"},
]
keywords = ["video", "pipeline", "ffmpeg", "ken-burns", "documentary", "explainer", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "rich>=13.0",
    "typer>=0.12",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "streamlit>=1.36",
]
dashboard = [
    "streamlit>=1.36",
]

[project.scripts]
narrascape = "narrascape.cli:main"

[project.urls]
Homepage = "https://github.com/zh683/narrascape"
Documentation = "https://github.com/zh683/narrascape/tree/main/docs"
Repository = "https://github.com/zh683/narrascape"
Issues = "https://github.com/zh683/narrascape/issues"

[tool.hatch.version]
path = "src/narrascape/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/narrascape"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "B007",   # allow descriptive loop variables in prototype diagnostics
    "B017",   # broad exception assertions are used in compatibility tests
    "B023",   # retry closures intentionally capture request objects
    "B904",   # CLI raises typer.Exit after printing user-facing errors
    "E501",
    "E402",   # CLI keeps some imports near command helpers
    "E741",   # keep legacy local naming until broader cleanup
    "F841",   # allow in-progress diagnostic locals in prototype code
    "N806",   # keep established math-style local names in motion code
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM211",
]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
files = ["src"]
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "openai",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "PIL",
    "PIL.*",
    "streamlit",
    "streamlit.*",
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "pydeck",
    "pydeck.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=narrascape --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/narrascape"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
